@startuml
namespace mediator {
    class Customer << (S,Aquamarine) >> {
        - sequence int
        - mediator Mediator

        + Name string

        + SetMediator(m Mediator) *Customer
        + Enter() 
        + Leave() 

    }
    class FittingRoom << (S,Aquamarine) >> {
        - no int
        - state int
        - customer *Customer
        - last time.Time

    }
    interface Mediator  {
        + Wait( *Customer) <font color=blue>chan</font> *FittingRoom
        + Enter( *Customer) 
        + Leave( *Customer) 

    }
    class fittingRoomMediator << (S,Aquamarine) >> {
        + Rooms []*FittingRoom
        + WaitingCustomers <font color=blue>chan</font> *waiter

        + Wait(customer *Customer) <font color=blue>chan</font> *FittingRoom
        + Enter(customer *Customer) 
        + Leave(customer *Customer) 

    }
    class waiter << (S,Aquamarine) >> {
        - ch <font color=blue>chan</font> *FittingRoom

    }
}
"mediator.Customer" "1" --> "1" "mediator.Mediator"

"mediator.Customer" *-- "mediator.waiter"
"mediator.Mediator" "1" -right-> "n" "mediator.FittingRoom"

"mediator.Mediator" <|-- "mediator.fittingRoomMediator"
"mediator.fittingRoomMediator" -up-> "mediator.waiter"

@enduml
